# learn_arrow

./: Cargo.toml  build.rs
arrow_flight/client/: Cargo.toml
arrow_flight/client/src/: lib.rs  main.rs
arrow_flight/server/: Cargo.toml
arrow_flight/server/src/: executor.rs  lib.rs  main.rs  state.rs
arrow_server/: Cargo.toml  test.wal
arrow_server/examples/: client.rs  server.rs
arrow_server/src/: error.rs  lib.rs
arrow_server/src/client/: mod.rs
arrow_server/src/client/cli/: get_schema.rs  handshake.rs  mod.rs  put.rs
arrow_server/src/db/: mod.rs  table.rs  wal.rs
arrow_server/src/flight/: do_get.rs  do_put.rs  get_schema.rs  list_flights.rs  mod.rs  state.rs
arrow_server/src/memdb/: core.rs  index.rs  mod.rs  value.rs
arrow_server/src/parquet/: active_file.rs  mod.rs
arrow_server/tests/: flight_test.rs
datafusion/server/: Cargo.toml
datafusion/server/src/: lib.rs  main.rs  memdb.rs
datafusion/server/test/: 0.tssp  1.tssp  example.tssp  example1.tssp
examples/: client.rs  flight_server.rs  server.rs
proto/: arrowmessage.proto  helloworld.proto
src/: ar_msg.rs  lib.rs
src/hw/: arrow_msg.rs  helloworld.rs  mod.rs
test/data/: basic.json
