[workspace]
members = [ "arrow_flight/client","arrow_flight/server", "arrow_server", "datafusion/server"]


[package]
name = "learn_arrow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[workspace.dependencies]
arrow = "51.0.0"
arrow-flight = "51.0.0"
futures = "0.3.30"
prost = "0.12.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.37.0", features = ["full"] }
tonic = "0.11.0"


[build-dependencies]
tonic-build = "0.11.0"

[dependencies]
anyhow = "1.0.82"
