[package]
name = "arrow_server"
version = "0.1.0"
edition = "2021"

# [[bin]]
# name = "arrow_cli"
# path = "examples/client.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
arrow = {workspace = true }
arrow-flight = {workspace = true }
futures = {workspace = true }
prost = {workspace = true }
serde = {workspace = true }
serde_json = {workspace = true }
tokio = {workspace = true }
tonic = {workspace = true }

datafusion = "37.1.0"
parquet = { version = "51.0.0", features = ["arrow"] }
clap = { version = "4.5.4", features = ["derive"] }
thiserror = "1.0.60"
dashmap = "5.5.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"


