[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
arrow = {workspace = true }
arrow-flight = {workspace = true }
futures = {workspace = true }
prost = {workspace = true }
serde = {workspace = true }
serde_json = {workspace = true }
tokio = {workspace = true }
tonic = {workspace = true }
